# GenAI_Exchange

social_media_promotion/: README.md  po.py  pyproject.toml
social_media_promotion/memory/: chroma.sqlite3
social_media_promotion/src/social_media_promotion/: app.py  app_shop.py  crew.py  gradio_app.py  main.py
social_media_promotion/src/social_media_promotion/config/: agents.yaml  tasks.yaml
social_media_promotion/src/social_media_promotion/db/: chroma.sqlite3
social_media_promotion/src/social_media_promotion/shop_data/: shop.db
social_media_promotion/src/social_media_promotion/shop_data/static/: styles.css
social_media_promotion/src/social_media_promotion/shop_data/templates/: admin.html  base.html  index.html  login.html  products.html  search.html  upload.html  user.html  user_products.html  users_search.html
social_media_promotion/src/social_media_promotion/storage/: crew_memory.db
social_media_promotion/src/social_media_promotion/tools/: __init__.py  custom_tool.py  img_tool.py  n8n_tool.py  speech_tool.py  telegram_tool.py
social_media_promotion/tests/: bot_story_session.session  business_id.py  my_account.session  telegram_bot_method.py  test_veo_video_generator.py
