[project]
name = "social_media_promotion"
version = "0.1.0"
description = "Social_Media_Promotion using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
social_media_promotion = "social_media_promotion.main:run"
run_crew = "social_media_promotion.main:run"
train = "social_media_promotion.main:train"
replay = "social_media_promotion.main:replay"
test = "social_media_promotion.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
